[metadata]
name = protox_encoding
version = 0.0.4
url = http://github.com/sergey-tikhonov/protox_encoding
description = Protox encoding library written in Cython
author = Sergey Tikhonov
author_email = srg.tikhonov@gmail.com
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
packages = find:

[build-system]
requires = ["setuptools", "wheel", "Cython"]