[metadata]
name = protox_encoding
url = http://github.com/sergey-tikhonov/protox_encoding
description = Protox encoding library written in Cython
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergey Tikhonov
author_email = srg.tikhonov@gmail.com
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
packages = find:

[build-system]
requires = ["setuptools", "wheel", "Cython"]
